--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pre-try",
+  "name": "next-start",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
-    "@react-google-maps/api": "^2.19.3",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.3.2",
-    "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
-    "react-hot-toast": "^2.4.1"
+    "next": "14.2.13"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13"
   }
 }
