--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.10",
+    "@heroui/card": "^2.2.10",
+    "@heroui/navbar": "^2.2.9",
+    "@heroui/switch": "^2.2.9",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "framer-motion": "^12.0.5",
+    "lucide-react": "^0.474.0",
     "next": "14.2.13",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18"
   },
