--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/theme": "^2.4.6",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
+    "nexios-http": "^1.1.21",
     "next": "14.2.13",
     "next-themes": "^0.4.4",
     "react": "^18",
