--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@heroui/switch": "^2.2.9",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "framer-motion": "^12.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "nexios-http": "^1.1.21",
     "next": "14.2.13",
