--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/accordion": "^2.2.8",
     "@heroui/button": "^2.2.10",
     "@heroui/card": "^2.2.10",
     "@heroui/navbar": "^2.2.9",
