--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "@heroui/accordion": "^2.2.8",
+    "@heroui/avatar": "^2.2.7",
     "@heroui/button": "^2.2.10",
     "@heroui/card": "^2.2.10",
+    "@heroui/dropdown": "^2.3.10",
+    "@heroui/input": "^2.4.10",
+    "@heroui/modal": "^2.2.8",
     "@heroui/navbar": "^2.2.9",
+    "@heroui/select": "^2.4.10",
+    "@heroui/spinner": "^2.2.7",
     "@heroui/switch": "^2.2.9",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
+    "@heroui/tooltip": "^2.2.8",
     "@types/jsonwebtoken": "^9.0.8",
     "framer-motion": "^12.0.5",
     "jsonwebtoken": "^9.0.2",
